{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 1785,
  "lineage": "ff5cb3a0-d4c4-e59c-5eec-14d5ca9040fe",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077cf7a7773c2d96f",
            "arn": "arn:aws:ec2:us-east-1:277707125207:instance/i-09e8012966221bbb6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "BastionHostProfile",
            "id": "i-09e8012966221bbb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b71e410c2fe3c31d",
            "private_dns": "ip-10-0-4-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.78",
            "public_dns": "ec2-107-23-249-222.compute-1.amazonaws.com",
            "public_ip": "107.23.249.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cab5bfe5867c9f09",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0609fe20eb1c607c2",
            "tags": {
              "Name": "EC2 Bastion"
            },
            "tags_all": {
              "Name": "EC2 Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0461d5d9163512b37"
            ]
          },
          "dependencies": [
            "module.bastion.data.aws_ami.amazon_linux",
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_role.bastion_role",
            "module.key.aws_key_pair.generated_key",
            "module.key.tls_private_key.ssh_key",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_security_group.database",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d545b069b6697fb0",
            "arn": "arn:aws:ec2:us-east-1:277707125207:elastic-ip/eipalloc-0d545b069b6697fb0",
            "association_id": "eipassoc-04f6cfa38da9e88b7",
            "domain": "vpc",
            "id": "eipalloc-0d545b069b6697fb0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03df31dee300f479a",
            "private_dns": "ip-10-0-4-227.ec2.internal",
            "private_ip": "10.0.4.227",
            "public_dns": "ec2-54-146-179-132.compute-1.amazonaws.com",
            "public_ip": "54.146.179.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kezie-lab-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:internet-gateway/igw-033b733a58c896540",
            "id": "igw-033b733a58c896540",
            "owner_id": "277707125207",
            "tags": {
              "Name": "kezie-lab-vpc-igw"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-igw"
            },
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d545b069b6697fb0",
            "association_id": "eipassoc-04f6cfa38da9e88b7",
            "connectivity_type": "public",
            "id": "nat-070fe24c8738a6199",
            "network_interface_id": "eni-03df31dee300f479a",
            "private_ip": "10.0.4.227",
            "public_ip": "54.146.179.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0609fe20eb1c607c2",
            "tags": {
              "Name": "kezie-lab-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:route-table/rtb-047806bbd69431f41",
            "id": "rtb-047806bbd69431f41",
            "owner_id": "277707125207",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-070fe24c8738a6199",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kezie-lab-vpc-private-route"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:route-table/rtb-0d7f4ba004534e24f",
            "id": "rtb-0d7f4ba004534e24f",
            "owner_id": "277707125207",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033b733a58c896540",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kezie-lab-vpc-public-route"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:security-group/sg-0766d1d1f39e217d9",
            "description": "Allow traffic from web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0766d1d1f39e217d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069199451839479a0"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "kezie-lab-vpc-app-sg",
            "name_prefix": "",
            "owner_id": "277707125207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kezie-lab-vpc-app-sg"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:security-group/sg-0461d5d9163512b37",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0461d5d9163512b37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kezie-lab-vpc-bastion-sg",
            "name_prefix": "",
            "owner_id": "277707125207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kezie-lab-vpc-bastion-sg"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:security-group/sg-0727be84fdef265d5",
            "description": "Allow PostgreSQL access from app servers and bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0727be84fdef265d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0461d5d9163512b37"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0766d1d1f39e217d9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "kezie-lab-vpc-database-sg",
            "name_prefix": "",
            "owner_id": "277707125207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kezie-lab-vpc-database-sg"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.app",
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:security-group/sg-069199451839479a0",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069199451839479a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kezie-lab-vpc-web-sg",
            "name_prefix": "",
            "owner_id": "277707125207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kezie-lab-vpc-web-sg"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:subnet/subnet-0a97a9255313817f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a97a9255313817f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707125207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kezie-lab-vpc-private-0"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-private-0"
            },
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:subnet/subnet-000d08ee52c2bb35b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d08ee52c2bb35b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707125207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kezie-lab-vpc-private-1"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-private-1"
            },
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:subnet/subnet-0c059a1fa5498e553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c059a1fa5498e553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707125207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kezie-lab-vpc-private-2"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-private-2"
            },
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:subnet/subnet-0609fe20eb1c607c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0609fe20eb1c607c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707125207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kezie-lab-vpc-public-0"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-public-0"
            },
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:subnet/subnet-0f79c04de06bfa667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f79c04de06bfa667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707125207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kezie-lab-vpc-public-1"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-public-1"
            },
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:subnet/subnet-076c93b3dbc090b75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076c93b3dbc090b75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707125207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kezie-lab-vpc-public-2"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc-public-2"
            },
            "vpc_id": "vpc-0f79f194cf4bd9aac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:277707125207:vpc/vpc-0f79f194cf4bd9aac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0817f1c37b9f7f43a",
            "default_route_table_id": "rtb-0b03f78fa28529469",
            "default_security_group_id": "sg-05c7c2232eb1507ee",
            "dhcp_options_id": "dopt-05986241128535e57",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f79f194cf4bd9aac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b03f78fa28529469",
            "owner_id": "277707125207",
            "tags": {
              "Name": "kezie-lab-vpc"
            },
            "tags_all": {
              "Name": "kezie-lab-vpc"
            }
          }
        }
      ]
    }
  ]
}